QMetaType of non-const ref: play nice with template instantiations

...by making QMetaTypeId2 contain all expected members.
While we don't allow QMetaType from non-const references, we want to
get to the static_assert telling us as much, instead of running into
more or less incomprehensible error messages in the depths of
qmetatype.h.

Task-number: QTBUG-106672
Change-Id: Ica9b13fee95eda97cafab2cccdc5249dfc3dcdf2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 9b3de58d2dfedfdd8097b329438a2f2f086aa43f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>